# prova

./: .gitignore  .luarc.json  .prova.toml  CLAUDE.md  Cargo.toml  README.md
.prova/: config.lua  (+1 more)
crates/prova-archetect/: Cargo.toml
crates/prova-archetect/src/: lib.rs
crates/prova-archetect/tests/: render.rs  rust_cli.rs  verify.rs
crates/prova-archetect/tests/fixtures/greeting/: archetype.lua  archetype.yaml
crates/prova-archetect/tests/fixtures/greeting/contents/: {{ name }}.txt
crates/prova-cli/: Cargo.toml  build.rs
crates/prova-cli/selftest/: README.md  capability_test.lua  cli_test.lua  introspect_test.lua  learn_test.lua  manifest_test.lua  mcp_test.lua  mcp_warm_test.lua  must_run_test.lua  prova.toml  spec_test.lua
crates/prova-cli/selftest/fixtures/: mixed.lua  passing.lua
crates/prova-cli/selftest/fixtures/context-project/: prova.toml
crates/prova-cli/selftest/fixtures/context-project/docs/: conventions.md
crates/prova-cli/selftest/fixtures/mcp-project/: .last-failed.json  prova.toml
crates/prova-cli/selftest/fixtures/mcp-project/greet/: init.lua
crates/prova-cli/selftest/fixtures/mcp-project/tests/: sample_test.lua
crates/prova-cli/selftest/fixtures/spec-project/: prova.toml
crates/prova-cli/selftest/fixtures/spec-project/tests/: backlog_test.lua
crates/prova-cli/selftest/fixtures/warm-project/: prova.toml
crates/prova-cli/selftest/fixtures/warm-project/tests/: warm_test.lua
crates/prova-cli/src/: annotations.rs  catalog.rs  home.rs  ide.rs  init.rs  learn.rs  main.rs  manifest.rs  mcp.rs  plugins.rs  registry.rs  report.rs  runstate.rs  skill.md
crates/prova-cli/src/topics/: authoring.md  doubles.md  drivers.md  fixtures.md  init.md  mcp.md  pdd.md  plugin-authoring.md  plugins.md  project.md  proxies.md  running.md  specs.md  topologies.md
crates/prova-cli/tests/: config_key.rs  eval_cli.rs  explicit_path_home.rs  home_layout.rs  ide_setup.rs  init_catalog.rs  init_render.rs  init_state.rs  paths_root_relative.rs  pattern_discovery.rs  plugin_cli_flag.rs  plugin_git.rs  plugin_git_update.rs  plugin_is_a_suite.rs  plugin_lint_cli.rs  plugin_manifest.rs  plugin_shorthand.rs  proof_discovery.rs  selftest.rs  topology_bridge.rs  topology_git.rs  topology_lifecycle.rs  topology_listing.rs  topology_options.rs  topology_requires.rs
crates/prova-cli/tests/fixtures/arch-basic/: archetype.lua  archetype.yaml
crates/prova-cli/tests/fixtures/arch-basic/contents/: README.md  prova.toml
crates/prova-cli/tests/fixtures/arch-basic/contents/{{ proof_dir }}/: example_test.lua
crates/prova-cli/tests/fixtures/arch-state/: archetype.lua  archetype.yaml
crates/prova-cli/tests/fixtures/arch-state/contents/: state.txt
crates/prova-cli/tests/fixtures/arch-switched/: archetype.lua  archetype.yaml
crates/prova-cli/tests/fixtures/arch-switched/ci/: ci.yaml
crates/prova-cli/tests/fixtures/arch-undefaulted/: archetype.lua  archetype.yaml
crates/prova-core/: Cargo.toml
crates/prova-core/src/: engine.rs  help.rs  layout.rs  lib.rs  model.rs  modules.rs  plugins.rs  suite.rs
crates/prova-core/src/plugins/prova/: double.lua  workspace.lua
crates/prova-core/testdata/: absent_namespace.lua  assertions.lua  assertions_soft.lua  async.lua  async_fixture.lua  builder_bare_test.lua  builder_empty_flow.lua  builder_empty_group.lua  c2_e2e.lua  container_app.lua  containerized.lua  containerized_network.lua  dag_serial.lua  db.lua  depends_on.lua  describe.lua  docker.lua  docker_build.lua  docker_failure_reporting.lua  docker_network.lua  docker_readiness.lua  ergonomics.lua  fully_rendered.lua  grpc.lua  grpc_mock.lua  http_mock.lua  mock_handler_errors.lua  mock_network_vantage.lua  mock_proxy.lua  net.lua  parse.lua  plugin_require.lua  port_mode.lua  requires.lua  requires_version.lua  resource_exclusive.lua  resource_remode.lua  resource_retired_words.lua  resource_shared.lua  selection.lua  (+16 more)
crates/prova-core/testdata/layout_nested/suites/outer/: a_test.lua  suite.lua
crates/prova-core/testdata/layout_nested/suites/outer/inner/: b_test.lua  suite.lua
crates/prova-core/testdata/layout_plugin_root/.prova/plugins/greet/: init.lua
crates/prova-core/testdata/layout_plugin_root/proofs/: uses_test.lua
crates/prova-core/testdata/layout_require/shared/: fixtures.lua
crates/prova-core/testdata/layout_require/suites/: use_test.lua
crates/prova-core/testdata/layout_require_roots/proofs/mocks/: use_test.lua
crates/prova-core/testdata/layout_require_roots/proofs/shared/: thing.lua
crates/prova-core/testdata/plugin_lint/: bad_facet.lua  good.lua  no_facets.lua  not_a_table.lua
crates/prova-core/testdata/plugin_lint/multi/: helpers.lua  multi.lua  prova-plugin.toml
crates/prova-core/testdata/plugin_private_deps/.prova/plugins/alpha/: prova-plugin.toml
crates/prova-core/testdata/plugin_private_deps/proofs/: private_deps_test.lua
crates/prova-core/testdata/plugins/: greet.lua
crates/prova-core/testdata/suite/: alpha_test.lua  beta_test.lua
crates/prova-core/testdata/suite_cpu/: a_test.lua  b_test.lua
crates/prova-core/testdata/suite_requires/: suite.lua  x_test.lua
crates/prova-core/testdata/suite_shared/: a_test.lua  b_test.lua  suite.lua
crates/prova-core/tests/: absent_namespace.rs  assertions.rs  async_exec.rs  builder_misuse.rs  c2_e2e.rs  capability_isolation.rs  container_app.rs  containerized.rs  containerized_network.rs  dag_serial.rs  db.rs  db_mysql.rs  db_postgres.rs  depends_on.rs  describe.rs  docker.rs  docker_build.rs  docker_failure_reporting.rs  docker_network.rs  docker_readiness.rs  ergonomics.rs  eval.rs  flows.rs  fully_rendered.rs  graphql.rs  grpc.rs  grpc_mock.rs  http.rs  http_mock.rs  kafka.rs  layout_nested.rs  layout_plugin_root.rs  layout_require.rs  layout_require_roots.rs  lifecycle.rs  mock_handler_errors.rs  mock_network_vantage.rs  mock_proxy.rs  modules.rs  mysql.rs  (+25 more)
crates/prova-core/tests/common/: mod.rs
examples/fixtures/inventory-producer/: Cargo.toml  build.rs
examples/fixtures/inventory-producer/proto/: inventory.proto
examples/fixtures/inventory-producer/src/: main.rs
(+150 files in other folders)
