[workspace]
resolver = "2"
members = ["crates/prova-core", "crates/prova-cli", "crates/prova-archetect"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.0.0"

[workspace.dependencies]
# Match archetect's mlua: Lua 5.4, vendored so we don't depend on a system Lua.
mlua = { version = "0.11", features = ["lua54", "vendored"] }
