[workspace]
resolver = "2"
members = ["crates/prova-core", "crates/prova-cli", "crates/prova-archetect"]

[workspace.package]
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
description = "A programmable, language-agnostic black box acceptance-test runner."
documentation = "https://prova-rs.github.io"
edition = "2021"
homepage = "https://prova-rs.github.io"
license = "MIT"
repository = "https://github.com/prova-rs/prova"
version = "0.2.7"

[workspace.dependencies]
# Match archetect's mlua: Lua 5.4, vendored so we don't depend on a system Lua.
# `serialize` powers serde<->Lua conversion (http `:json()` request/response bodies).
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
