[workspace]
resolver = "2"
members = ["crates/prova-core", "crates/prova-cli", "crates/prova-archetect", "xtask"]

[workspace.package]
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
description = "A programmable, language-agnostic black box acceptance-test runner."
documentation = "https://prova-rs.github.io"
edition = "2021"
homepage = "https://prova-rs.github.io"
license = "MIT"
repository = "https://github.com/prova-rs/prova"
version = "0.3.0"

[workspace.dependencies]
# Match archetect's mlua: Lua 5.4, vendored so we don't depend on a system Lua.
# `serialize` powers serde<->Lua conversion (http `:json()` request/response bodies).
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
# The shared git-source cache (TTL + remote-hash freshness gate), from the archetect workspace.
# Pinned to the same tag prova-archetect pins archetect-core/api to, so all archetect crates resolve
# from one checkout.
archetect-git-cache = { git = "https://github.com/archetect/archetect.git", tag = "v3.2.1" }
