[package]
name = "prova-archetect"
version.workspace = true
edition.workspace = true
license.workspace = true

# The `archetect` plugin module for prova: renders archetypes in-process via archetect-core and
# exposes them to the Lua DSL as `archetect.render{...}`. Kept out of prova-core so the core stays
# domain-agnostic (this is the same plugin boundary a `docker` or `terraform` module would sit on).

[dependencies]
prova-core = { path = "../prova-core" }
mlua = { workspace = true }
# archetect pinned to a published tag until its crates land on crates.io. Both crates live in the
# same repo, so one git source with a shared tag resolves both.
archetect-core = { git = "https://github.com/archetect/archetect.git", tag = "v3.1.1" }
archetect-api = { git = "https://github.com/archetect/archetect.git", tag = "v3.1.1" }
camino = { version = "1.1", features = ["serde1"] }
