[package]
name = "prova-cli"
description = "The `prova` command-line test runner."
keywords = ["testing", "acceptance-testing", "lua", "cli"]
readme = "../../README.md"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prova"
path = "src/main.rs"

[dependencies]
prova-core = { path = "../prova-core" }
# The flagship plugin: makes `archetect.render{...}` available in the standalone `prova` binary.
prova-archetect = { path = "../prova-archetect" }
# The suite manifest (`prova.toml`): declare what to run and how, for local + CI.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Plugin compatibility gating: check a `prova-plugin.toml`'s `requires.prova` range against the
# running version, the way archetype.yaml's `requires.archetect` gates an archetype.
semver = "1"
