[package]
name = "prova-cli"
description = "The `prova` command-line test runner."
keywords = ["testing", "acceptance-testing", "lua", "cli"]
readme = "../../README.md"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prova"
path = "src/main.rs"

[dependencies]
glob = "0.3"
prova-core = { path = "../prova-core" }
# The flagship plugin: makes `archetect.render{...}` available in the standalone `prova` binary.
prova-archetect = { path = "../prova-archetect" }
# The suite manifest (`prova.toml`): declare what to run and how, for local + CI.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Reading/merging the project `.luarc.json` (LuaLS IDE pointer) during annotation sync.
serde_json = "1"
# Plugin compatibility gating: check a `prova-plugin.toml`'s `requires.prova` range against the
# running version, the way archetype.yaml's `requires.archetect` gates an archetype.
semver = "1"
# MCP mode (`prova mcp`): the official Rust MCP SDK serving the CLI-parity tools over stdio.
rmcp = { version = "1.4", features = ["server", "transport-io"] }
schemars = "1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
# The docker-test semaphore (see prova-core/tests/common/mod.rs, included by path from eval_cli).
# `eval_cli` provisions a real container, so it contends with prova-core's docker binaries for one
# daemon — cargo runs each test BINARY as its own process, in parallel, across crates too.
fs2 = "0.4"
