[package]
name = "prova-cli"
description = "The `prova` command-line test runner."
keywords = ["testing", "acceptance-testing", "lua", "cli"]
readme = "../../README.md"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prova"
path = "src/main.rs"

[dependencies]
glob = "0.3"
prova-core = { path = "../prova-core" }
# Shared git-source cache: TTL + remote-hash freshness gate for `[plugins]` git sources (the same
# crate archetect uses, so both tools cache identically). Brings git2/libgit2 into this build.
archetect-git-cache = { workspace = true }
# UTF-8 path conversion at the git-cache boundary (the crate speaks `camino::Utf8Path`).
camino = "1.1"
# The flagship plugin: makes `archetect.render{...}` available in the standalone `prova` binary.
prova-archetect = { path = "../prova-archetect" }
# Interactive catalog picker for `prova init` with no key. Same version archetect-terminal-io uses,
# so the two share one build of inquire.
inquire = "0.9"
# The suite manifest (`prova.toml`): declare what to run and how, for local + CI.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Rich console output (the cargo/clap stack): `anstream::AutoStream` does the tty/NO_COLOR/
# CLICOLOR_FORCE/Windows-console detection so styled output degrades to plain text when piped;
# `anstyle` is the zero-dep style vocabulary.
anstream = "0.6"
anstyle = "1"
# Reading/merging the project `.luarc.json` (LuaLS IDE pointer) during annotation sync.
serde_json = "1"
# Plugin compatibility gating: check a plugin's `prova.toml` `requires.prova` range against the
# running version, the way archetype.yaml's `requires.archetect` gates an archetype.
semver = "1"
# MCP mode (`prova mcp`): the official Rust MCP SDK serving the CLI-parity tools over stdio.
rmcp = { version = "1.4", features = ["server", "transport-io"] }
# `~/` expansion for manifest `context` paths (same crate prova-core's layout uses).
dirs = "5"
schemars = "1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
# The docker-test semaphore (see prova-core/tests/common/mod.rs, included by path from eval_cli).
# `eval_cli` provisions a real container, so it contends with prova-core's docker binaries for one
# daemon — cargo runs each test BINARY as its own process, in parallel, across crates too.
fs2 = "0.4"
