[package]
name = "prova-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mlua = { workspace = true, features = ["async"] }
# Async from the ground up: a per-run current-thread runtime drives many concurrent Lua
# coroutines cooperatively (I/O-bound concurrency for load/stress; real timeouts via cancellation).
# `process` powers `shell`; `io-util` is its runtime dep for child pipes; `net` is the `docker`
# module's TCP readiness probe.
tokio = { version = "1", features = ["rt", "time", "macros", "process", "io-util", "net", "signal"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
# Structured, streaming output for machine consumers (CI, and a future GUI/IDE frontend).
serde_json = "1"
# Filesystem globbing for the `fs` module (fs.glob(root, "**/*.rs")).
glob = "0.3"
# Home-directory discovery for the XDG SystemLayout (config/cache/data dirs). Light, no transitive
# weight; only used to locate `~` — the XDG_* env vars and path joins are done by hand.
dirs = "5"
# The `http` module. v1 is HTTP-only (no TLS) to stay light — covers localhost service
# boot-and-probe; an https feature can layer rustls on later. Feature-gated so builds can opt out.
reqwest = { version = "0.12", optional = true, default-features = false }
# The `postgres`/`mysql`/`sqlite` modules — one general Connection API over sqlx's `Any` driver
# (backend chosen by URL scheme). Heavy, so feature-gated per engine (default on). No TLS in v1
# (local/CI containers).
sqlx = { version = "0.8", optional = true, default-features = false, features = [
    "runtime-tokio",
    "any",
] }
# The `docker` module — the typed Docker daemon client (bollard), not CLI-shelling: structured
# errors, log streams, exec, port inspection. Feature-gated (default on).
bollard = { version = "0.18", optional = true }
# The `grpc` module — a *native*, dynamic gRPC client (no `grpcurl` on PATH). It discovers the
# server's schema at runtime via gRPC Server Reflection (`tonic-reflection`'s client), builds request
# messages from Lua tables against the fetched descriptors (`prost-reflect`'s `DynamicMessage`), and
# invokes with a generic tonic codec. Versions track archetect-core's tonic/prost (0.14) so the
# workspace lockfile dedupes to a single build. Plaintext-only in v1 (local/CI containers), matching
# `http`'s no-TLS stance. Feature-gated (default on); `prova-core` still builds `--no-default-features`.
tonic = { version = "0.14", default-features = false, features = ["channel"], optional = true }
tonic-reflection = { version = "0.14", default-features = false, optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
prost-reflect = { version = "0.16.5", features = ["serde"], optional = true }
# The `yaml` module — parse YAML (k8s manifests, CI configs, compose files) to Lua values, the way
# `http`'s `:json()` does for JSON. General black-box-testing capability, not archetype-specific.
# Maintained serde_yaml fork. Feature-gated (default on); light, pure-Rust.
serde_yaml_ng = { version = "0.10.0", optional = true }
serde = { version = "1", optional = true }
# The `mock` facet (`http.mock`) — an in-process stub/record server for the dependency you can't run.
#
# **Raw hyper, deliberately not axum.** A stub's response may be a *Lua function*, and mlua handles
# are `!Send`, so the service future that calls one is `!Send`. axum (and anything tower-shaped)
# bounds its handlers `Send`, which rules it out at the type level — no amount of wrapping recovers
# it. hyper's `server::conn::http1` puts no `Send` bound on the service or its future, so the
# connection future is driven on the engine's existing current-thread runtime via `spawn_local`,
# right next to the test coroutine it is answering. That constraint chose the dep.
#
# Cost is zero: every crate here is already compiled into this binary via bollard/tonic/reqwest, so
# this is a declaration, not a new stack. Feature-gated (default on) alongside `http`.
hyper = { version = "1", default-features = false, features = [
    "server",
    "http1",
], optional = true }
hyper-util = { version = "0.1", default-features = false, features = [
    "tokio",
], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
# Query-string parsing for a recorded request's `query` table. Already compiled (reqwest → url →
# form_urlencoded); declared rather than hand-rolled because percent-decoding is a well-known place
# to introduce a quiet bug for no benefit.
form_urlencoded = { version = "1", optional = true }

[dev-dependencies]
# A cross-process file lock, for serializing the docker-heavy integration tests (tests/common/mod.rs).
# `cargo test` runs each test BINARY as its own process, in parallel, and `--test-threads` bounds only
# the threads WITHIN a binary — so all eight docker binaries pile onto one daemon at once and
# container starts time out. That is a recurring flake, not a logic failure (it times out; a real
# failure fails fast). Needs to be a crate rather than a raw flock because the CI matrix includes
# Windows.
fs2 = "0.4"

[features]
default = ["http", "sqlite", "docker", "grpc", "graphql", "yaml", "mock"]
http = ["dep:reqwest"]
# The `mock` facet on protocol namespaces — `http.mock` today; `grpc.mock`/`net.mock` later. Implies
# `http`: a mock is asserted on through the same journal the `http` client's types already describe,
# and there is no coherent build with a mock server but no client to drive it.
mock = [
    "http",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:bytes",
    "dep:form_urlencoded",
]
# GraphQL over HTTP (POST { query, variables } → { data, errors }); shares reqwest with `http`.
graphql = ["dep:reqwest"]
# SQL databases — one namespace per engine (feature = namespace = global), all returning the same
# generic Connection over sqlx's `Any` driver.
sqlite = ["dep:sqlx", "sqlx/sqlite"]
docker = ["dep:bollard"]
grpc = [
    "dep:tonic",
    "dep:tonic-reflection",
    "dep:prost",
    "dep:prost-types",
    "dep:prost-reflect",
]
yaml = ["dep:serde_yaml_ng", "dep:serde"]
